# joy

./: .envrc  .gitignore  HelloWorld.hs  RS.hs  cabal.project  flake.nix  hie.yaml  joy.cabal  result  stack.yaml  test  test.hs
blog/: Set.org  init.org
src/: afterlife.hs  calc.hs  calendar.hs  calendar2.hs  falgebra.hs  free-monad.hs  json.hs  life.hs
src/FRP/: Cat.hs  Expr.hs  frp.hs  tui.hs
src/algebra-design/: Ex.md  ScavengerHunt.md  algebra-design.cabal
src/free/: cat.cabal  free.cabal
src/free/Cat/: Adjunction.hs  Category.hs  Experimental.hs  Free.hs  Functor.hs  Misc.hs  NaturalTransform.hs  Prelude.hs
src/free/Monad/: Free.hs
src/free/Tests/: Main.hs
src/free/Types/: Misc.hs
src/messenger/: Main.hs  idea.md
src/pretty-printer/: Main.hs
