cabal-version:       2.4
name:                joy
version:             0.1.0.0
license:             ISC
build-type:          Simple

common common-options
       build-depends:      base
       ghc-options:        -Wall
                           -Wincomplete-uni-patterns
                           -Wincomplete-record-updates
                           -Wcompat
                           -Widentities
                           -Wredundant-constraints
                           -Wpartial-fields
                           -fhide-source-paths
       default-language:   Haskell2010
       default-extensions:
                           -- AutoDeriveTypeable
                           ApplicativeDo
                           BangPatterns
                           BinaryLiterals
                           BlockArguments
                           ConstraintKinds
                           DataKinds
                           DefaultSignatures
                           DeriveDataTypeable
                           DeriveFoldable
                           DeriveFunctor
                           DeriveGeneric
                           DeriveTraversable
                           DoAndIfThenElse
                           EmptyDataDecls
                           ExistentialQuantification
                           FlexibleContexts
                           FlexibleInstances
                           FunctionalDependencies
                           GADTs
                           GeneralizedNewtypeDeriving
                           InstanceSigs
                           KindSignatures
                           LambdaCase
                           -- MonadFailDesugaring
                           MultiParamTypeClasses
                           MultiWayIf
                           NamedFieldPuns
                           -- NoImplicitPrelude
                           OverloadedStrings
                           PartialTypeSignatures
                           PatternGuards
                           PolyKinds
                           RankNTypes
                           RecordWildCards
                           ScopedTypeVariables
                           StandaloneDeriving
                           TupleSections
                           TypeFamilies
                           TypeSynonymInstances
                           ViewPatterns

library
  import:                      common-options
  other-modules:
  build-depends:                base
                              , QuickCheck


executable Hello
           import:              common-options
           main-is:             HelloWorld.hs
           build-depends:       base
                              , random
                              , joy
                              , containers
                              , QuickCheck
           default-language:    Haskell2010

executable RS
           import:              common-options
           main-is:             RS.hs
           build-depends:       random
                              , joy
                              , containers
                              , QuickCheck
           default-language:    Haskell2010

executable FRP
           import:              common-options
           main-is:             frp.hs
           hs-source-dirs:      src/FRP
           build-depends:       random
                              , joy
                              , containers
                              , QuickCheck
           default-language:    Haskell2010

executable FAlgebra
           import:              common-options
           main-is:             falgebra.hs
           hs-source-dirs:      src
           build-depends:       random
                              , joy
                              , text
                              , deriving-compat
                              , data-fix
                              , recursion-schemes
                              , containers
                              , QuickCheck
           default-language:    Haskell2010

executable Life
           import:              common-options
           main-is:             life.hs
           hs-source-dirs:      src
           build-depends:       random
                              , joy
                              , transformers
                              , text
                              , deriving-compat
                              , data-fix
                              , recursion-schemes
                              , containers
                              , QuickCheck
           default-language:    Haskell2010



executable TUI
           import:              common-options
           main-is:             tui.hs
           hs-source-dirs:      src/FRP
           other-modules:       Expr
           build-depends:       random
                              , brick >= 1.1
                              , vty
                              , microlens
                              , text
                              , microlens-th
                              , async
                              , recursion-schemes
                              , data-fix
                              , mtl
                              , deriving-compat
                              , containers
                              , QuickCheck
           ghc-options:         -threaded
           default-language:    Haskell2010
