cabal-version:       2.4
name:                algebra-design
version:             0.1.0.0
license:             ISC
build-type:          Simple

common common-options
       build-depends:      base
       ghc-options:        -Wall
                           -Wincomplete-uni-patterns
                           -Wincomplete-record-updates
                           -Wcompat
                           -Widentities
                           -Wredundant-constraints
                           -Wpartial-fields
                           -fhide-source-paths
       default-language:   Haskell2010

-- library
--     import: common-options
--     build-depends: base
--                    , constraints

--     exposed-modules: Cat.Free
--                      Cat.Category
--                      Cat.Adjunction
--                      Cat.Experimental
--                      Cat.Prelude
--                      -- Cat.NaturalTransform

--                      Types.Misc

executable Algebra
           import: common-options
           hs-source-dirs: .
           main-is: Main.hs
           build-depends: algebra-design
