cabal-version:       2.4
name:                cat
version:             0.1.0.0
license:             ISC
build-type:          Simple

common common-options
       build-depends:      base
       ghc-options:        -Wall
                           -Wincomplete-uni-patterns
                           -Wincomplete-record-updates
                           -Wcompat
                           -Widentities
                           -Wredundant-constraints
                           -Wpartial-fields
                           -fhide-source-paths
       default-language:   Haskell2010

library
    import: common-options
    build-depends: base

    exposed-modules: Monad.Free

executable FreeMain
           import: common-options
           hs-source-dirs: Tests
           main-is: Main.hs
           build-depends: refree
